--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "enzyme": "^2.8.1",
     "expect": "^1.20.2",
     "express": "^4.15.2",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.0.0",
     "mocha": "^3.2.0",
+    "mongoose": "^5.0.4",
+    "morgan": "^1.9.0",
     "node-sass": "^4.5.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
