--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme": "^2.8.1",
     "expect": "^1.20.2",
     "express": "^4.15.2",
+    "express-fileupload": "^0.4.0",
     "express-validator": "^5.0.0",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.34",
