--- a/package.json
+++ b/package.json
@@ -29,16 +29,18 @@
     "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.0",
-    "jquery": "^1.9.1",
+    "jquery": "^1.12.4",
     "mocha": "^3.2.0",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.14",
     "node-sass": "^4.5.2",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.12.9",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-time-picker": "^1.0.3",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
