--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.0",
+    "google-calendar": "^1.3.2",
     "jquery": "^3.3.1",
     "mocha": "^5.2.0",
     "mongodb": "^3.0.2",
@@ -50,7 +51,8 @@
     "redux-devtools-log-monitor": "^1.3.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.2",
