--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "jquery": "^3.3.1",
     "mocha": "^5.2.0",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.14",
+    "mongoose": "^5.4.11",
     "node-sass": "^4.9.3",
     "npm": "^6.4.1",
     "passport": "^0.4.0",
@@ -52,6 +52,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-table": "^6.9.1",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
