--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.0",
+    "file-loader": "^3.0.1",
     "file-type": "^10.1.0",
     "fs": "0.0.1-security",
     "google-calendar": "^1.3.2",
     "jquery": "^3.3.1",
     "mocha": "^5.2.0",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.14",
+    "mongoose": "^5.4.16",
     "node-sass": "^4.9.3",
     "npm": "^6.4.1",
     "passport": "^0.4.0",
