--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-type": "^10.1.0",
     "fs": "0.0.1-security",
     "google-calendar": "^1.3.2",
+    "jest-cli": "^24.1.0",
     "jquery": "^3.3.1",
     "mocha": "^5.2.0",
     "mongodb": "^3.0.2",
